completed the HTML Portfolio Project

--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -13,3 +13,20 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">   
+    <title>Portfolio</title>
+</head>
+<body>
+    <h1>Nandana Babu</h1>
+    <h2>I'm a Web Developer</h2>
+    <hr/>
+    <a href="./public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
+    <img src="./assets/images/Movie Ranking.png" alt="movie-ranking">
+    <a href="./public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
+    <img src="./assets/images/Birthday invitation .png" alt="birthday-invite">
+</body>
+</html>
