--- a/2.4 Movie Ranking Project/index.html
+++ b/2.4 Movie Ranking Project/index.html
@@ -1,9 +1,9 @@
 <!-- Write your code below -->
-<h1>The Best Movies According to Angela</h1>
+<h1>The Best Movies According to Nandana</h1>
 <h3>My top 3 movies of all-time</h3>
 <hr/>
 <h4>Spirited Array </h4>
-<p>Tis is my favorite anime. I love the beautiful images.</p>
+<p>It's is my favorite anime. I love the beautiful images.</p>
 <h4>Ex Machina</h4>
 <p>Really cool sci-fi movie.</p>
 <h4>Drive</h4>
