--- a/4.3 HTML Porfolio Project/public/contact.html
+++ b/4.3 HTML Porfolio Project/public/contact.html
@@ -1,9 +1,10 @@
-<h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+
+  <h1>Contact Me</h1>
+<p>Tel: 7907938286</p>
+<p>Email: nandunsb99@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  Nandanam<br />
+  Pulimathu,Pulimathu (P.O)<br />
+  Kilimanoor<br />
 </p>
