task using inline , internal and external CSS are done

--- a/5.1. Adding CSS/index.html
+++ b/5.1. Adding CSS/index.html
@@ -9,6 +9,9 @@
 <body>
   <h1>Three Methods of Adding CSS</h1>
   <!-- Create 3 Links to The 3 Webpages: inline, internal and external -->
+  <a href="./inline.html">Inline CSS</a>
+  <a href="./internal.html">Inline CSS</a>
+  <a href="./external.html">External CSS</a>
 </body>
 
 </html>
