--- a/5.1. Adding CSS/inline.html
+++ b/5.1. Adding CSS/inline.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>Inline</title>
 </head>
-
 <body>
-<h1>Style Me in Blue!</h1>
+  <h1 style="color: blue;">Style Me in Blue!</h1>
 </body>
-
 </html>
