completed the motivation meme project task

--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+ <title>Motivation Meme</title>
+ <link rel="stylesheet" href="./style.css"/>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div class="poster">
+    <img src="./assets/images/daenerys.jpeg" alt="img">
+    <h1>THAT SPECIAL MOMENT</h1>
+    <p>When you look back on your life, don't have regrets. Believe in yourself, belief in your future, you will find your way.
+    A fire burning inside you is mighty; it is waiting to burn bright. You are meant to do great things.</p>
+  </div>  
+</body>
+</html>
 <!-- 
   TODO: Create a motivational post website.
 Style it how ever you like. 
