change heading in to uppercase

--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="poster">
     <img src="./assets/images/daenerys.jpeg" alt="img">
-    <h1>THAT SPECIAL MOMENT</h1>
+    <h1>That special moment</h1>
     <p>When you look back on your life, don't have regrets. Believe in yourself, belief in your future, you will find your way.
     A fire burning inside you is mighty; it is waiting to burn bright. You are meant to do great things.</p>
   </div>  
