comments are added to  the index

--- a/7.3 CSS Flag Project/index.html
+++ b/7.3 CSS Flag Project/index.html
@@ -13,7 +13,8 @@
       position: relative;
     }
     /* blue rec */
-    .flag>div{
+   /* child selector */
+    .flag >div{
       background-color: #002868;
       width: 900px;
       height: 300px;
@@ -36,6 +37,7 @@
       text-align: center;
       color: white;
     }
+    /* combine selector */
    .flag  div  div  p{
     color: black;
     }
