added one comment

--- a/8.0 CSS Display/index.html
+++ b/8.0 CSS Display/index.html
@@ -36,8 +36,8 @@
     }
   </style>
 </head>
-
-
+<!-- 
+css display property -->
 <body>
   <h1>CSS Display Property</h1>
   <p class="red">Red Paragraph </p>
