--- a/8.4 Web Design Agency Project/index.html
+++ b/8.4 Web Design Agency Project/index.html
@@ -15,12 +15,11 @@
   <div class="main">
     <img class="logo" src="./assets/images/logo.png" alt="logo">
     <h1>We are a <span class="creative">Creative</span><br/> Design Agency</h1>
+
     <div class="left card"><img class="tile-image" src="./assets/images/beautiful.jpg" alt="hand and flower in water">
       <h2 class="card-title">Beauty</h2>
       <p class="card-text">We strive to create the most beautiful websites for all your needs. Working closely with you
-        to
-        design and
-        develop an amazing website for your business.</p>
+        to design and develop an amazing website for your business.</p>
     </div>
 
     <div class="right card"><img class="tile-image" src="./assets/images/construction.jpg" alt="metal structure">
