Display Flex task completed

--- a/9.0 Display Flex/index.html
+++ b/9.0 Display Flex/index.html
@@ -17,9 +17,13 @@
     }
 
     .container {
+      display: flex;
       padding: 10px;
       background-color: gold;
+      gap: 10px;
     }
+
+
 
   </style>
 </head>
