Flexbox Pricing Table Project - set the container div  in index file

--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -15,7 +15,16 @@
     @media (max-width: 1250px) {
       
     }
-    
+    .pricing-container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      gap: 2rem;
+    }
+   
+
+
   </style>
 </head>
 
