--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -22,7 +22,14 @@
       height: 100vh;
       gap: 2rem;
     }
-   
+    .pricing-plan{ 
+      max-width: 400px;  
+      padding: 20px;
+      border-radius: 5px;
+      text-align: center;
+      background-color: #f2f2f2;
+      flex: 1; 
+    }
 
 
   </style>
