Flexbox Pricing Table Project - Price Table heading title styled

--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -15,6 +15,7 @@
     @media (max-width: 1250px) {
       
     }
+   
     .pricing-container{
       display: flex;
       justify-content: center;
@@ -22,6 +23,7 @@
       height: 100vh;
       gap: 2rem;
     }
+
     .pricing-plan{ 
       max-width: 400px;  
       padding: 20px;
@@ -29,6 +31,12 @@
       text-align: center;
       background-color: #f2f2f2;
       flex: 1; 
+    }
+    
+    .plan-title{
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 10px;
     }
 
 
