--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -32,12 +32,20 @@
       background-color: #f2f2f2;
       flex: 1; 
     }
-    
+
     .plan-title{
       font-size: 24px;
       font-weight: bold;
       margin-bottom: 10px;
     }
+
+    .plan-price{
+      font-size: 48px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+   
 
 
   </style>
