--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -45,7 +45,15 @@
       margin-bottom: 10px;
     }
 
-   
+    .plan-features{
+      list-style:none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .plan-features li{
+      margin-bottom: 10px;
+    }
 
 
   </style>
