Flexbox Pricing Table Project - Button styled

--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -54,6 +54,14 @@
     .plan-features li{
       margin-bottom: 10px;
     }
+    .plan-button{
+      background-color: #ff6600;
+      color: white;
+      padding: 10px;
+      border-radius: 5px;
+      border: none;
+      
+    }
 
 
   </style>
