Used gradient color to make the pricing table more attractive

--- a/9.4 Flexbox Pricing Table Project/index.html
+++ b/9.4 Flexbox Pricing Table Project/index.html
@@ -9,6 +9,7 @@
   <style>
     body {
       font-family: 'Sono', sans-serif;
+      background-image: linear-gradient(to right, rgb(248, 85, 85) , rgb(248, 248, 84));
     }
 
     /* Hint: What can you do with a media query and flexbox? */
@@ -32,7 +33,7 @@
       padding: 20px;
       border-radius: 5px;
       text-align: center;
-      background-color: #f2f2f2;
+      background-image: linear-gradient(to left, rgb(233, 174, 11), rgb(240, 90, 3));
       flex: 1; 
     }
 
