Grid - Chess board making - The colors of the columns and rows were set.

--- a/10.0 Display Grid/index.html
+++ b/10.0 Display Grid/index.html
@@ -7,6 +7,17 @@
     /* Write your code here */
     /* Each square should be 100px by 100px */
     /* My colours for white: #f0d9b5, black: #b58863 */
+    
+    .white{
+      background-color: white;
+      height: 100px;
+      width: 100px;
+    }
+    .black{
+       height: 100px;
+      width: 100px;
+      background-color: black;
+    }
   </style>
 </head>
 
