--- a/10.0 Display Grid/index.html
+++ b/10.0 Display Grid/index.html
@@ -7,7 +7,13 @@
     /* Write your code here */
     /* Each square should be 100px by 100px */
     /* My colours for white: #f0d9b5, black: #b58863 */
-    
+    .container{
+      width: 800px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      
+    }
     .white{
       background-color: white;
       height: 100px;
