created div for the Mondrian Painting

--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -6,6 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mondrian Project</title>
   <style>
+    .container{
+      display: grid;
+     
+    
+    }
+    .red{
+      background-color: #E72F24;
+      grid-template-columns: ;
+
+    }
+
     /* 
     Write your CSS here 
     Gap Colour: #000
@@ -19,11 +30,23 @@
     HINT: Remember you can't change the properties of grid lines.
     But grid lines are transparent!
     */
+
   </style>
 </head>
 
 <body>
   <!-- Write your HTML here -->
+  <div class="container">
+    <div class="item red"></div>
+    <div class="item white1"></div>
+    <div class="item white2"></div>
+    <div class="item white3"></div>
+    <div class="item blue"></div>
+    <div class="item white4"></div>
+    <div class="item white5"></div>
+    <div class="item yellow"></div>
+    <div class="item black"></div>
+  </div>
 </body>
 
 </html>
