--- a/11.0 Bootstrap Intro/index.html
+++ b/11.0 Bootstrap Intro/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap</title>
   <!-- TODO 1: Add the Bootstrap link here. -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <style>
     /* TODO 4: Use flexbox to center the card in the vertical and horizontal center. */
@@ -16,8 +18,10 @@
 <body>
   <div class="flex-container">
     <!-- TODO 2: Add the Bootstrap Prebuilt Card here -->
+
+
     <!-- TODO 3: Change the image src to display the flower.jpg image. -->
-    
+
   </div>
 </body>
 
