create card bootstrap prebuild card in the  body

--- a/11.0 Bootstrap Intro/index.html
+++ b/11.0 Bootstrap Intro/index.html
@@ -18,7 +18,15 @@
 <body>
   <div class="flex-container">
     <!-- TODO 2: Add the Bootstrap Prebuilt Card here -->
-
+    <div class="card" style="width: 18rem;">
+      <img src="./flower.jpg" class="card-img-top" alt="flower">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+        </p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
 
     <!-- TODO 3: Change the image src to display the flower.jpg image. -->
 
