created flexbox to align the card in the page

--- a/11.0 Bootstrap Intro/index.html
+++ b/11.0 Bootstrap Intro/index.html
@@ -11,6 +11,13 @@
 
   <style>
     /* TODO 4: Use flexbox to center the card in the vertical and horizontal center. */
+    .flex-container
+{
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
 
   </style>
 </head>
