--- a/11.2 Bootstrap Components/index.html
+++ b/11.2 Bootstrap Components/index.html
@@ -7,11 +7,16 @@
   <title>Bootstrap Components
 
   </title>
-
+<!-- bootstrap link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <style>
+  /* add custom css */
+.btn {
+  align-items: center;
+  align-content: center;
 
+}
   </style>
 </head>
 
@@ -19,7 +24,7 @@
 
 
 <body>
-
+<button class="btn btn-success">OK</button>
 
 </body>
 
