--- a/11.2 Bootstrap Components/index.html
+++ b/11.2 Bootstrap Components/index.html
@@ -59,23 +59,70 @@
 </nav>
 
 <div class="px-4 pt-5 my-5 text-center border-bottom">
-  <h1 class="display-4 fw-bold text-body-emphasis">Centered screenshot</h1>
+  <h1 class="display-4 fw-bold text-body-emphasis">Move With Joy</h1>
   <div class="col-lg-6 mx-auto">
-    <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-      popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive
-      prebuilt components, and powerful JavaScript plugins.</p>
+    <p class="lead mb-4">Welcome to our website, where we are on a mission to provide exceptional moving services to customers in the US. As a
+    startup, we believe that moving doesn't have to be stressful or complicated, and we are passionate about making the
+    process as seamless and enjoyable as possible.</p>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-      <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
-      <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+      <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Get a Quote</button>
+      <button type="button" class="btn btn-outline-secondary btn-lg px-4">Contact US</button>
     </div>
   </div>
   <div class="overflow-hidden" style="max-height: 30vh;">
     <div class="container px-5">
-      <img src="bootstrap-docs.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700"
+      <img src="./moving-van.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700"
         height="500" loading="lazy">
     </div>
   </div>
 </div>
+
+<div class="container px-4 py-5" id="featured-3">
+    <h2 class="pb-2 border-bottom">Columns with icons</h2>
+    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+      <div class="feature col">
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
+        </div>
+        <h3 class="fs-2 text-body-emphasis">Professional</h3>
+        <p>Our team of professional movers are trained to prioritize efficiency, organization, and attention to detail. We
+        understand that your possessions are more than just objects - they are a reflection of your life, memories, and
+        experiences. That's why we take extra care to ensure that everything is packed and transported with the utmost care and
+        attention.</p>
+        <a href="#" class="icon-link">
+          Get a quote
+          <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+        </a>
+      </div>
+      <div class="feature col">
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"></use></svg>
+        </div>
+        <h3 class="fs-2 text-body-emphasis">Countrywide</h3>
+        <p>We offer a range of services to suit your individual needs, whether you're moving locally or across the country. Our
+        team can handle everything from packing and loading to unloading and unpacking, so you can focus on settling into your
+        new home. And with our transparent pricing and no hidden fees, you can trust that you're getting a fair and competitive
+        rate for our services.</p>
+        <a href="#" class="icon-link">
+          Get a quote
+          <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+        </a>
+      </div>
+      <div class="feature col">
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
+        </div>
+        <h3 class="fs-2 text-body-emphasis">Personal Touch</h3>
+        <p>At our core, we believe that moving should be an exciting and positive experience, not a stressful one. By providing
+        exceptional moving services in the US, we hope to revolutionize the way people think about moving and provide a better,
+        more personalized experience for our customers. Contact us today to learn more about how we can help you with your next
+        move.</p>
+        <a href="#" class="icon-link">
+          Get a quote
+          <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+        </a>
+      </div>
+    </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
