Bootstrap Components - Styled the box in 2nd section of the body

--- a/11.2 Bootstrap Components/index.html
+++ b/11.2 Bootstrap Components/index.html
@@ -11,11 +11,14 @@
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <style>
   /* add custom css */
-.btn {
-  align-items: center;
-  align-content: center;
+  
 
+.feature-icon {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 0.75rem;
 }
+
   </style>
 </head>
 
@@ -84,7 +87,7 @@
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
           <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
         </div>
-        
+
         <h3 class="fs-2 text-body-emphasis">Professional</h3>
         <p>Our team of professional movers are trained to prioritize efficiency, organization, and attention to detail. We
         understand that your possessions are more than just objects - they are a reflection of your life, memories, and
