Bootstrap Components - Deleting the existing svg form the box in the 2nd body section  and replacing it with the svg  that are already downloaded

--- a/11.2 Bootstrap Components/index.html
+++ b/11.2 Bootstrap Components/index.html
@@ -85,7 +85,7 @@
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
+          <img src="./briefcase.svg" alt="briefcase"height="30">
         </div>
 
         <h3 class="fs-2 text-body-emphasis">Professional</h3>
@@ -101,7 +101,7 @@
 
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"></use></svg>
+         <img src="./bus-front.svg" alt="bus-front"height="30">
         </div>
         <h3 class="fs-2 text-body-emphasis">Countrywide</h3>
         <p>We offer a range of services to suit your individual needs, whether you're moving locally or across the country. Our
@@ -116,7 +116,7 @@
 
       <div class="feature col">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
+         <img src="./chat-square-heart.svg" alt="chat-square-heart" height="30">
         </div>
         <h3 class="fs-2 text-body-emphasis">Personal Touch</h3>
         <p>At our core, we believe that moving should be an exciting and positive experience, not a stressful one. By providing
