Bootstrap Components - updated get aquote svg also from the 2nd body section

--- a/11.2 Bootstrap Components/index.html
+++ b/11.2 Bootstrap Components/index.html
@@ -95,7 +95,7 @@
         attention.</p>
         <a href="#" class="icon-link">
           Get a quote
-          <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+          <img src="./chevron-right.svg" alt="chevron-right">
         </a>
       </div>
 
@@ -110,7 +110,7 @@
         rate for our services.</p>
         <a href="#" class="icon-link">
           Get a quote
-          <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+          <img src="./chevron-right.svg" alt="chevron-right">
         </a>
       </div>
 
@@ -125,7 +125,7 @@
         move.</p>
         <a href="#" class="icon-link">
           Get a quote
-          <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+          <img src="./chevron-right.svg" alt="chevron-right">
         </a>
       </div>
     </div>
