Bootstrap Components  - uploaded carousel images in the body

--- a/11.2 Bootstrap Components/index.html
+++ b/11.2 Bootstrap Components/index.html
@@ -142,13 +142,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="./couple.jpg" class="d-block w-100" alt="couple">
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="./dog.jpg" class="d-block w-100" alt="dog">
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="./family.jpg" class="d-block w-100" alt="family">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
