TinDog Project - primary and secondary buttons changed form title section

--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -23,7 +23,7 @@
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Meet new and interesting dogs nearby</h1>
 
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
+            <button type="button" class="btn btn-light btn-lg px-4 me-md-2">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-apple mb-1"
               viewBox="0 0 16 16">
               <path
@@ -33,7 +33,7 @@
             </svg>
             Download
           </button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">
+            <button type="button" class="btn btn-outline-light btn-lg px-4">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google-play mb-1"
               viewBox="0 0 16 16">
               <path
