--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -51,6 +51,7 @@
   <!-- Features -->
   <section id="features">
 
+<div class="container">
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="col d-flex align-items-start">
         <div
@@ -100,6 +101,7 @@
           </a>
         </div>
       </div>
+    </div>
     </div>
 
 
