--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -50,7 +50,6 @@
   </section>
   <!-- Features -->
   <section id="features">
-
 <div class="container mt-5">
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
       <div class="col d-flex align-items-start">
@@ -106,6 +105,16 @@
   </section>
   <!-- Testimonial -->
   <section id="testimonial">
+
+    <div class="p-5 text-center bg-body-tertiary">
+      <div class="container py-5">
+        <h1 class="text-body-emphasis">Full-width jumbotron</h1>
+        <p class="col-lg-8 mx-auto lead">
+          This takes the basic jumbotron above and makes its background edge-to-edge with a <code>.container</code> inside
+          to align content. Similar to above, it's been recreated with built-in grid and utility classes.
+        </p>
+      </div>
+    </div>
 
 
   </section>
