--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -108,16 +108,14 @@
 
     <div class="p-5 text-center bg-body-tertiary">
       <div class="container py-5">
-        <h1 class="text-body-emphasis">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h1>
+        <h2 class="text-body-emphasis">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h1>
         <p class="col-lg-8 mx-auto lead">
-          This takes the basic jumbotron above and makes its background edge-to-edge with a <code>.container</code> inside
-          to align content. Similar to above, it's been recreated with built-in grid and utility classes.
+          Pebbles, New York          
         </p>
       </div>
     </div>
-
-
   </section>
+  
   <!-- Pricing -->
   <section id="pricing">
 
