--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -109,13 +109,14 @@
     <div class="p-5 text-center bg-body-tertiary">
       <div class="container py-5">
         <h2 class="text-body-emphasis">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h1>
+          <img src="./images/dog-img.jpg" alt="dog-img">
         <p class="col-lg-8 mx-auto lead">
           Pebbles, New York          
         </p>
       </div>
     </div>
   </section>
-  
+
   <!-- Pricing -->
   <section id="pricing">
 
