--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -111,7 +111,7 @@
 
         <div class="container">
           <div class="row">
-            <div class="col"></div>
+            <div class="col-lg-3 col-sm-12"></div>
           </div>
         
         </div>
