--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -111,7 +111,9 @@
 
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-sm-12"></div>
+            <div class="col-lg-3 col-sm-12">
+              <img src="./images/techcrunch.png" alt="">
+            </div>
           </div>
         
         </div>
