TinDog Project - also created balance 3 columns in the testimonial and each of them filled with images

--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -114,6 +114,15 @@
             <div class="col-lg-3 col-sm-12">
               <img src="./images/techcrunch.png" alt="">
             </div>
+            <div class="col-lg-3 col-sm-12">
+              <img src="./images/mashable.png" alt="">
+            </div>
+            <div class="col-lg-3 col-sm-12">
+              <img src="./images/bizinsider.png" alt="">
+            </div>
+            <div class="col-lg-3 col-sm-12">
+              <img src="./images/tnw.png" alt="">
+            </div>
           </div>
         
         </div>
