TinDog Project - set the height  of all the columns in the testimonial  to 30

--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -112,16 +112,16 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-sm-12">
-              <img src="./images/techcrunch.png" alt="">
+              <img src="./images/techcrunch.png" alt="techcrunch" height="30">
             </div>
             <div class="col-lg-3 col-sm-12">
-              <img src="./images/mashable.png" alt="">
+              <img src="./images/mashable.png" alt="mashable"height="30">
             </div>
             <div class="col-lg-3 col-sm-12">
-              <img src="./images/bizinsider.png" alt="">
+              <img src="./images/bizinsider.png" alt="bizinsider"height="30">
             </div>
             <div class="col-lg-3 col-sm-12">
-              <img src="./images/tnw.png" alt="">
+              <img src="./images/tnw.png" alt="tnw" height="30">
             </div>
           </div>
         
