--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -123,11 +123,10 @@
             <div class="col-lg-3 col-sm-12">
               <img src="./images/tnw.png" alt="tnw" height="30">
             </div>
-          </div>
-        
+          </div>       
         </div>
-
     </div>
+
   </section>
 
 
@@ -135,7 +134,14 @@
   <!-- Pricing -->
   <section id="pricing">
     <div class="container">
-      
+
+
+      <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+        <h1 class="display-4 fw-normal text-body-emphasis">Pricing</h1>
+        <p class="fs-5 text-body-secondary">Quickly build an effective pricing table for your potential customers with this
+          Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+      </div>
+
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm">
