--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -137,9 +137,8 @@
 
 
       <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-        <h1 class="display-4 fw-normal text-body-emphasis">Pricing</h1>
-        <p class="fs-5 text-body-secondary">Quickly build an effective pricing table for your potential customers with this
-          Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+        <h1 class="display-4 fw-normal text-body-emphasis">A Plan for Every Dog's Needs</h1>
+        <p class="fs-5 text-body-secondary">Simple and affordable price plans for you and your dog.</p>
       </div>
 
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
