TinDog Project - Footer Section -   updated it with the exact text and wrapped  it inside a container div

--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -198,6 +198,7 @@
   </section>
   <!-- Footer -->
   <section id="footer">
+    <div class="container">
 
     <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
       <div class="col mb-3">
@@ -206,7 +207,7 @@
             <use xlink:href="#bootstrap"></use>
           </svg>
         </a>
-        <p class="text-body-secondary">© 2023</p>
+        <p class="text-body-secondary">©TinDog</p>
       </div>
     
       <div class="col mb-3">
@@ -246,7 +247,7 @@
         </ul>
       </div>
     </footer>
-    
+    </div>
 
   </section>
 </body>
