--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -197,10 +197,10 @@
     </div>
   </section>
   <!-- Footer -->
-  <section id="footer">
+  <section id="footer" class="gradient-background">
     <div class="container">
 
-    <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
+    <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 ">
       <div class="col mb-3">
         <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
           <svg class="bi me-2" width="40" height="32">
