--- a/dicee.html
+++ b/dicee.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
       rel="stylesheet"
     />
+    
   </head>
   <body>
     <div class="container">
@@ -15,15 +16,19 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="" />
+        <img class="img1" src="./images/dice6.png" />
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="" />
+        <img class="img2" src="./images/dice6.png" />
       </div>
     </div>
 
-    <footer>www 🎲 App Brewery 🎲 com</footer>
+    <footer>www 🎲 web development 🎲 com</footer>
+
+    <script src="index.js" charset="utf-8"> </script>
+
+
   </body>
 </html>
