--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -5,10 +5,22 @@
     <meta charset="utf-8">
     <title>jQuery</title>
     <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <body>
+    <h1>Hello,</h1>
+    <button>Click Me</button>
+    <button>Click Me</button>
+    <button>Click Me</button>
+    <button>Click Me</button>
+    <button>Click Me</button>
+
+
+
+
+
+
+    <script src="index.js" charset="utf-8"></script>
 </body>
 
 </html>
