--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>jQuery</title>
     <link rel="stylesheet" href="styles.css">
-</head>
+
+   
 
 <body>
     <h1>Hello,</h1>
@@ -16,11 +17,9 @@
     <button>Click Me</button>
 
 
-
-
-
-
-    <script src="index.js" charset="utf-8"></script>
-</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="index.js" charset="utf-8"></script>
+</head>
+</body>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
 
 </html>
