updated with class attributes

--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -9,7 +9,7 @@
    
 
 <body>
-    <h1>Hello,</h1>
+    <h1 class="big-title margin-50"> Hello,</h1>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
